<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/main_constraint_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimaryDark">

  <Button
      android:id="@+id/activate_left_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/activate_left_notification"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/activate_right_button"/>

  <Button
      android:id="@+id/activate_right_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/activate_right_notification"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/notif_guide"/>

  <Button
      android:id="@+id/right_style_change"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/change_right_slider_style"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/notif_guide"
      android:enabled="false"/>

  <android.support.constraint.Guideline
      android:id="@+id/notif_guide"
      android:layout_width="1dp"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.25"
  />

  <com.jpcodes.slidenotification.SlideNotificationView
      android:id="@+id/left_slide_notification_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:elevation="10dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:slideNotification_enableLeftSideLayout="true"
      app:slideNotification_enableAutoCollapse="false"
      app:slideNotification_notificationText="@string/notification_new_match"
      app:slideNotification_notificationTextColor="@color/colorRed"
      app:slideNotification_notificationIcon="@drawable/ic_favorite_border_red_24dp"
      app:slideNotification_topPercentDraggableLimit="5"
      app:slideNotification_bottomPercentDraggableLimit="5">
  </com.jpcodes.slidenotification.SlideNotificationView>

  <com.jpcodes.slidenotification.SlideNotificationView
      android:id="@+id/right_slide_notification_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:elevation="10dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintEnd_toEndOf="parent">
  </com.jpcodes.slidenotification.SlideNotificationView>

</android.support.constraint.ConstraintLayout>