<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/notification_slide_in_fragment_container_left"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corner_left_notification_bg"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
>

  <ImageView
      android:id="@+id/slide_notification_icon_left"
      android:layout_width="46dp"
      android:layout_height="46dp"
      android:paddingEnd="8dp"
      android:paddingLeft="8dp"
      android:paddingRight="8dp"
      android:paddingStart="8dp"
      android:src="@drawable/ic_message_purple_24dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <TextView
      android:id="@+id/slide_notification_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginTop="8dp"
      android:paddingBottom="8dp"
      android:paddingStart="8dp"
      android:paddingTop="8dp"
      tools:text="New Message!"
      android:textColor="@color/colorDeepPurpleMaterial500"
      android:textSize="16sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toStartOf="@id/slide_notification_icon_left"
      app:layout_constraintTop_toTopOf="parent"
      />


</android.support.constraint.ConstraintLayout>
